--- a/SearchMovie/Base.lproj/Main.storyboard
+++ b/SearchMovie/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="textFieldPrimaryActionTriggered:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="xSR-ue-zpy"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-Gh-nwq">
                                         <rect key="frame" x="295" y="0.0" width="48" height="30"/>
@@ -92,16 +95,35 @@
             </objects>
             <point key="canvasLocation" x="1056.8" y="118.29085457271366"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="Vxq-dG-BTZ">
             <objects>
-                <viewController id="tGy-Jb-ivj" sceneMemberID="viewController">
+                <viewController id="tGy-Jb-ivj" customClass="DetailViewController" customModule="SearchMovie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nOW-hn-a8U">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hA9-Xg-wZC">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hA9-Xg-wZC" firstAttribute="top" secondItem="WnU-Ly-7iE" secondAttribute="top" id="77h-QX-EMv"/>
+                            <constraint firstItem="hA9-Xg-wZC" firstAttribute="leading" secondItem="WnU-Ly-7iE" secondAttribute="leading" id="DKQ-kk-zWn"/>
+                            <constraint firstItem="hA9-Xg-wZC" firstAttribute="trailing" secondItem="WnU-Ly-7iE" secondAttribute="trailing" id="Kbj-4q-4Es"/>
+                            <constraint firstItem="WnU-Ly-7iE" firstAttribute="bottom" secondItem="hA9-Xg-wZC" secondAttribute="bottom" id="ofK-Gy-akH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WnU-Ly-7iE"/>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="hA9-Xg-wZC" id="CwK-xL-0kI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q0W-h6-F7r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
